--- a/Serbian_Cyrillic.lng
+++ b/Serbian_Cyrillic.lng
@@ -1,7 +1,7 @@
 |~LANGUAGENAME|
 |Српски|
 |~LANGUAGEVERSION|
-|1.13|
+|1.14|
 |~LANGUAGEAUTHOR|
 |Ozzii|
 |~LANGUAGEAUTHOREMAIL|
@@ -390,8 +390,6 @@
 |Овде можете подесити KeePass.|
 |Automatically open last used database on startup|
 |Отвори задњу коришћену базу приликом покретања|
-|Automatically save database on exit and workspace locking|
-|Сачувај базу на излаз и на блокирање површине|
 |Display images on buttons|
 |Покажи слике на дугмада|
 |Show grid lines in password entry list|
@@ -1276,3 +1274,5 @@
 |Одабрано поље, који идентификује изворну ставку, садржава недозвољене карактере (као '{', '}', нова линија карактер, ...).|
 |You can choose a different hot key combination in 'Tools' - 'Options' - 'Advanced' - 'Auto-Type'.|
 |Можете одабрати другу пречицу у 'Алатке' - 'Опције' - 'Напредно' - 'Ауто-Унос'.|
+|Automatically save when closing/locking the database|
+|Аутоматско сачувај на затварање/блокирање базе|
